--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lint": "ng lint"
     },
     "dependencies": {
+        "@agm/core": "^3.0.0-beta.0",
         "@angular/animations": "12.2.3",
         "@angular/cdk": "12.2.3",
         "@angular/common": "12.2.3",
@@ -34,14 +35,18 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@ngneat/transloco": "2.22.0",
+        "@types/googlemaps": "^3.43.3",
         "apexcharts": "3.28.1",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.12",
+        "ng2-cookies": "^1.0.12",
         "ngx-markdown": "12.0.1",
+        "ngx-mat-select-search": "^3.3.0",
         "ngx-quill": "14.3.0",
+        "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
         "perfect-scrollbar": "1.5.2",
         "quill": "1.3.7",
@@ -49,7 +54,8 @@
         "rxjs": "6.6.7",
         "tslib": "2.3.1",
         "web-animations-js": "2.3.2",
-        "zone.js": "0.11.4"
+        "zone.js": "0.11.4",
+        "@angular/google-maps": "12.2.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.2.3",
@@ -85,6 +91,8 @@
         "karma-jasmine": "4.0.1",
         "karma-jasmine-html-reporter": "1.7.0",
         "lodash": "4.17.21",
+        "ngx-mask": "^12.0.0",
+        "ngx-pagination": "^5.1.1",
         "postcss": "8.3.6",
         "tailwindcss": "2.2.9",
         "typescript": "4.3.5"
