--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/compiler": "12.2.3",
         "@angular/core": "12.2.3",
         "@angular/forms": "12.2.3",
+        "@angular/google-maps": "12.2.3",
         "@angular/material": "12.2.3",
         "@angular/material-moment-adapter": "12.2.3",
         "@angular/platform-browser": "12.2.3",
@@ -35,7 +36,7 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@ngneat/transloco": "2.22.0",
-        "@types/googlemaps": "^3.43.3",
+        "@types/googlemaps": "^3.39.13",
         "apexcharts": "3.28.1",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
@@ -54,8 +55,7 @@
         "rxjs": "6.6.7",
         "tslib": "2.3.1",
         "web-animations-js": "2.3.2",
-        "zone.js": "0.11.4",
-        "@angular/google-maps": "12.2.3"
+        "zone.js": "0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.2.3",
