--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "@angular/compiler": "12.2.3",
         "@angular/core": "12.2.3",
         "@angular/forms": "12.2.3",
-        "@angular/google-maps": "12.2.3",
         "@angular/material": "12.2.3",
         "@angular/material-moment-adapter": "12.2.3",
         "@angular/platform-browser": "12.2.3",
@@ -36,7 +35,10 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@ngneat/transloco": "2.22.0",
-        "@types/googlemaps": "^3.39.13",
+        "@ngrx/effects": "^12.4.0",
+        "@ngrx/entity": "^12.4.0",
+        "@ngrx/router-store": "^12.4.0",
+        "@ngrx/store": "^12.4.0",
         "apexcharts": "3.28.1",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
@@ -44,11 +46,13 @@
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.12",
         "ng2-cookies": "^1.0.12",
+        "ngrx": "0.0.1-security",
+        "ngrx-store-freeze": "^0.2.4",
+        "ngx-icon-picker": "^1.7.0",
         "ngx-markdown": "12.0.1",
-        "ngx-mat-select-search": "^3.3.0",
         "ngx-quill": "14.3.0",
-        "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
+        "object-path": "^0.11.8",
         "perfect-scrollbar": "1.5.2",
         "quill": "1.3.7",
         "rrule": "2.6.8",
@@ -71,6 +75,7 @@
         "@tailwindcss/typography": "0.4.1",
         "@types/chroma-js": "2.1.3",
         "@types/crypto-js": "3.1.47",
+        "@types/googlemaps": "^3.39.13",
         "@types/highlight.js": "10.1.0",
         "@types/jasmine": "3.8.2",
         "@types/lodash": "4.14.172",
@@ -91,8 +96,6 @@
         "karma-jasmine": "4.0.1",
         "karma-jasmine-html-reporter": "1.7.0",
         "lodash": "4.17.21",
-        "ngx-mask": "^12.0.0",
-        "ngx-pagination": "^5.1.1",
         "postcss": "8.3.6",
         "tailwindcss": "2.2.9",
         "typescript": "4.3.5"
