--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
         "ngrx-store-freeze": "^0.2.4",
         "ngx-icon-picker": "^1.7.0",
         "ngx-markdown": "12.0.1",
+        "ngx-mat-select-search": "^3.3.0",
         "ngx-quill": "14.3.0",
+        "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
         "object-path": "^0.11.8",
         "perfect-scrollbar": "1.5.2",
@@ -96,6 +98,8 @@
         "karma-jasmine": "4.0.1",
         "karma-jasmine-html-reporter": "1.7.0",
         "lodash": "4.17.21",
+        "ngx-mask": "^12.0.0",
+        "ngx-pagination": "^5.1.1",
         "postcss": "8.3.6",
         "tailwindcss": "2.2.9",
         "typescript": "4.3.5"
