--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@ngrx/router-store": "^12.4.0",
         "@ngrx/store": "^12.4.0",
         "apexcharts": "3.28.1",
+        "bootstrap": "^5.1.3",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
         "lodash-es": "4.17.21",
