--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "@ngrx/entity": "^12.4.0",
         "@ngrx/router-store": "^12.4.0",
         "@ngrx/store": "^12.4.0",
+        "@turf/intersect": "^6.3.0",
+        "@turf/turf": "^6.3.0",
         "apexcharts": "3.28.1",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
