--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
                     {
                         "type": "attribute",
                         "prefix": "",
-                        "style": "camelCase"
+                        "style": "camelCase snake_case"
                     }
                 ],
                 "@typescript-eslint/dot-notation": "off",
