--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@ngrx/store": "^12.4.0",
         "@turf/intersect": "^6.3.0",
         "@turf/turf": "^6.3.0",
+        "angular2-signaturepad": "^3.0.4",
         "apexcharts": "3.28.1",
         "bootstrap": "^5.1.3",
         "crypto-js": "3.3.0",
