--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@ngrx/store": "^12.4.0",
         "@turf/intersect": "^6.3.0",
         "@turf/turf": "^6.3.0",
+        "angular2-signaturepad": "^3.0.4",
         "apexcharts": "3.28.1",
         "bootstrap": "^5.1.3",
         "crypto-js": "3.3.0",
@@ -51,9 +52,12 @@
         "ng2-cookies": "^1.0.12",
         "ngrx": "0.0.1-security",
         "ngrx-store-freeze": "^0.2.4",
+        "ngx-barcode": "^0.3.0",
+        "ngx-capture": "^0.12.0",
         "ngx-icon-picker": "^1.7.0",
         "ngx-markdown": "12.0.1",
         "ngx-mat-select-search": "^3.3.0",
+        "ngx-print": "^1.2.1",
         "ngx-quill": "14.3.0",
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
