--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
+src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
