--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "3.28.1",
         "bootstrap": "^5.1.3",
+        "classlist.js": "^1.1.20150312",
         "crypto-js": "3.3.0",
         "highlight.js": "11.2.0",
         "lodash-es": "4.17.21",
@@ -67,7 +68,7 @@
         "rrule": "2.6.8",
         "rxjs": "6.6.7",
         "tslib": "2.3.1",
-        "web-animations-js": "2.3.2",
+        "web-animations-js": "^2.3.2",
         "zone.js": "0.11.4"
     },
     "devDependencies": {
