--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
         "@ngrx/store": "^12.4.0",
         "@turf/intersect": "^6.3.0",
         "@turf/turf": "^6.3.0",
+        "@types/file-saver": "^2.0.3",
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "3.28.1",
         "bootstrap": "^5.1.3",
         "crypto-js": "3.3.0",
+        "file-saver": "^2.0.5",
         "highlight.js": "11.2.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
