--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "file-saver": "^2.0.5",
         "highlight.js": "11.2.0",
         "lodash-es": "4.17.21",
+        "material-design-icons": "^3.0.1",
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.12",
         "ng2-cookies": "^1.0.12",
