--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
                             "src/@fuse/styles/main.scss",
                             "src/styles/styles.scss",
                             "src/styles/tailwind.scss",
-                            "node_modules/ngx-toastr/toastr.css"
+                            "node_modules/ngx-toastr/toastr.css",
+                            "./node_modules/material-icons-font/material-icons-font.css"
                         ],
                         "scripts": []
                     },
