--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@fullcalendar/moment": "4.4.2",
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
+        "@hreimer/angular-image-viewer": "^0.11.2",
         "@ngneat/transloco": "2.22.0",
         "@ngrx/effects": "^12.4.0",
         "@ngrx/entity": "^12.4.0",
