--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
                             "./node_modules/material-icons-font/material-icons-font.css"
                         ],
                         "scripts": [
-                            "node_modules/bootstrap/dist/js/bootstrap.js"
+                            "node_modules/bootstrap/dist/js/bootstrap.js",
+                            "node_modules/apexcharts/dist/apexcharts.min.js"
                         ]
                     },
                     "configurations": {
