--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "@turf/turf": "^6.3.0",
         "@types/file-saver": "^2.0.3",
         "angular2-signaturepad": "^3.0.4",
-        "apexcharts": "3.28.1",
+        "apexcharts": "^3.28.1",
         "bootstrap": "^5.1.3",
         "crypto-js": "3.3.0",
         "file-saver": "^2.0.5",
@@ -53,7 +53,7 @@
         "material-design-icons": "^3.0.1",
         "material-icons-font": "^2.1.0",
         "moment": "2.29.1",
-        "ng-apexcharts": "1.5.12",
+        "ng-apexcharts": "^1.5.12",
         "ng-image-slider": "^2.8.0",
         "ng2-cookies": "^1.0.12",
         "ngrx": "0.0.1-security",
