--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@hreimer/angular-image-viewer": "^0.11.2",
-        "@ngneat/transloco": "2.22.0",
+        "@ngneat/transloco": "^2.23.5",
         "@ngrx/effects": "^12.4.0",
         "@ngrx/entity": "^12.4.0",
         "@ngrx/router-store": "^12.4.0",
@@ -77,7 +77,7 @@
         "zone.js": "0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "12.2.3",
+        "@angular-devkit/build-angular": "^13.1.0",
         "@angular-eslint/builder": "12.3.1",
         "@angular-eslint/eslint-plugin": "12.3.1",
         "@angular-eslint/eslint-plugin-template": "12.3.1",
