--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "^3.28.1",
         "bootstrap": "^5.1.3",
+        "crypto": "^1.0.1",
+        "crypto-browserify": "^3.12.0",
         "crypto-js": "3.3.0",
         "file-saver": "^2.0.5",
         "highlight.js": "11.2.0",
@@ -67,6 +69,7 @@
         "ngx-quill": "14.3.0",
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
+        "node-rsa": "^1.1.1",
         "object-path": "^0.11.8",
         "perfect-scrollbar": "1.5.2",
         "quill": "1.3.7",
@@ -77,7 +80,7 @@
         "zone.js": "0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^13.1.0",
+        "@angular-devkit/build-angular": "12.2.3",
         "@angular-eslint/builder": "12.3.1",
         "@angular-eslint/eslint-plugin": "12.3.1",
         "@angular-eslint/eslint-plugin-template": "12.3.1",
@@ -116,5 +119,8 @@
         "postcss": "8.3.6",
         "tailwindcss": "2.2.9",
         "typescript": "4.3.5"
+    },
+    "browser": {
+        "crypto": false
     }
 }
