--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
         "@angular/platform-browser": "12.2.3",
         "@angular/platform-browser-dynamic": "12.2.3",
         "@angular/router": "12.2.3",
+        "@clarivate/angular-image-viewer": "^2.0.8",
+        "@fortawesome/angular-fontawesome": "^0.10.1",
+        "@fortawesome/fontawesome-svg-core": "~1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fullcalendar/angular": "4.4.5-beta",
         "@fullcalendar/core": "4.4.2",
         "@fullcalendar/daygrid": "4.4.2",
@@ -46,6 +50,7 @@
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "^3.28.1",
         "bootstrap": "^5.1.3",
+        "cropperjs": "^1.5.12",
         "crypto": "^1.0.1",
         "crypto-browserify": "^3.12.0",
         "crypto-js": "3.3.0",
