--- a/angular.json
+++ b/angular.json
@@ -70,8 +70,7 @@
                             "src/styles/tailwind.scss",
                             "node_modules/ngx-toastr/toastr.css",
                             "node_modules/bootstrap/scss/bootstrap.scss",
-                            "./node_modules/material-icons-font/material-icons-font.css",
-                            "node_modules/font-awesome/css/font-awesome.css"
+                            "./node_modules/material-icons-font/material-icons-font.css"
                         ],
                         "scripts": [
                             "node_modules/bootstrap/dist/js/bootstrap.js",
