--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@angular/platform-browser-dynamic": "12.2.3",
         "@angular/router": "12.2.3",
         "@clarivate/angular-image-viewer": "^2.0.8",
-        "@fortawesome/angular-fontawesome": "^0.10.1",
+        "@fortawesome/angular-fontawesome": "github:fortawesome/angular-fontawesome",
         "@fortawesome/fontawesome-svg-core": "~1.2.36",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fullcalendar/angular": "4.4.5-beta",
