--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "@angular-eslint/template-parser": "12.3.1",
         "@angular/cli": "12.2.3",
         "@angular/compiler-cli": "12.2.3",
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@tailwindcss/aspect-ratio": "0.2.1",
         "@tailwindcss/line-clamp": "0.2.1",
         "@tailwindcss/typography": "0.4.1",
