--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@turf/intersect": "^6.3.0",
         "@turf/turf": "^6.3.0",
         "@types/file-saver": "^2.0.3",
+        "@types/node-forge": "^0.10.10",
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "^3.28.1",
         "bootstrap": "^5.1.3",
@@ -74,6 +75,7 @@
         "ngx-quill": "14.3.0",
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
+        "node-forge": "^0.10.0",
         "node-rsa": "^1.1.1",
         "object-path": "^0.11.8",
         "perfect-scrollbar": "1.5.2",
