--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
         "angular2-signaturepad": "^3.0.4",
         "apexcharts": "^3.28.1",
         "bootstrap": "^5.1.3",
+        "buffer": "^6.0.3",
         "cropperjs": "^1.5.12",
         "crypto": "^1.0.1",
-        "crypto-browserify": "^3.12.0",
         "crypto-js": "^3.3.0",
         "file-saver": "^2.0.5",
         "highlight.js": "11.2.0",
