--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "crypto-js": "^3.3.0",
         "file-saver": "^2.0.5",
         "highlight.js": "11.2.0",
+        "html-to-pdfmake": "^2.3.10",
+        "jspdf": "^2.5.1",
         "lodash-es": "4.17.21",
         "material-design-icons": "^3.0.1",
         "material-icons-font": "^2.1.0",
@@ -79,6 +81,7 @@
         "node-forge": "^0.10.0",
         "node-rsa": "^1.1.1",
         "object-path": "^0.11.8",
+        "pdfmake": "^0.2.4",
         "perfect-scrollbar": "1.5.2",
         "quill": "1.3.7",
         "rrule": "2.6.8",
